tests/snapshots/plot_images__plots_emit_stable_images_for_repeats.snap
---
source: tests/plot_images.rs
expression: serialized
---
{
  "steps": [
    {
      "tool": "r_repl",
      "input": "plot(1:10)",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:2522b72c5d81851a70f577f10a50a32db6a3470a3bd862aa32757985d547212c",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "r_repl",
      "input": "plot(1:10)",
      "response": {
        "content": [
          {
            "type": "image",
            "data": "blake3:2522b72c5d81851a70f577f10a50a32db6a3470a3bd862aa32757985d547212c",
            "mimeType": "image/png"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    },
    {
      "tool": "r_repl",
      "input": "1+1",
      "response": {
        "content": [
          {
            "type": "text",
            "text": "[1] 2\n"
          },
          {
            "type": "text",
            "text": "> "
          }
        ],
        "isError": false
      }
    }
  ]
}
