tests/snapshots/plot_images__plots_emit_stable_images_for_repeats@transcript.snap
---
source: tests/plot_images.rs
expression: transcript
---
== transcript ==
1) repl
>>> plot(1:10)
<<< [image/png blake3:0694aafd9f8fc0744e7029b187c1ab182d061a4f180319772a19794be32ebf98]

2) repl
>>> plot(1:10)
<<< [image/png blake3:0694aafd9f8fc0744e7029b187c1ab182d061a4f180319772a19794be32ebf98]

3) repl
>>> 1+1
<<< [1] 2
<<<
